[gd_scene load_steps=2 format=3 uid="uid://bxxu024gkaojm"]

[ext_resource type="Script" uid="uid://dxvttdu6jre5p" path="res://single_layer_settings.gd" id="1_2c7e7"]

[node name="LayerHBox" type="HBoxContainer"]
custom_minimum_size = Vector2(256, 128)
script = ExtResource("1_2c7e7")

[node name="LayerButtons" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="LineEdit" type="LineEdit" parent="LayerButtons"]
layout_mode = 2
placeholder_text = "layer name..."
alignment = 1

[node name="LayerChangeButton" type="Button" parent="LayerButtons"]
layout_mode = 2
text = "change image"

[node name="LayerDeleteButton" type="Button" parent="LayerButtons"]
layout_mode = 2
text = "clear image"

[node name="LayerPreviewContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 3

[node name="LayerPreview" type="TextureRect" parent="LayerPreviewContainer"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 1

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[connection signal="pressed" from="LayerButtons/LayerChangeButton" to="." method="_on_layer_change_button_pressed"]
[connection signal="pressed" from="LayerButtons/LayerDeleteButton" to="." method="_on_layer_clear_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
